# AAA

./: .gitignore  .replit  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_STATUS.md  PDF_분석_및_평가_시스템_구축_완료_보고서.md  QUICK_START.md  README.md  api_logs_2025-11-14.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  turbo.json  개발_진행_상황_요약.md  기능_점검_및_개선_완료_보고서.md  다음_단계_완료_보고서.md  단위테스트_실행_결과.md  리포트_파싱_및_스코어카드_개선_완료_보고서.md  리포트_파싱_및_스코어카드_개선_작업계획.md  배포_가이드.md  배포_가이드_업데이트_완료.md  비즈니스_로직_개선_완료_보고서.md  비즈니스_로직_분석_보고서.md  아키텍처_추천.md  애널리스트_엑셀_등록_가이드.md  전체_개발_보완_완료_보고서.md  전체_구현_완료_보고서.md  전체_소스코드_분석.md  정합성_검증_및_수정_완료_보고서.md  정합성_점검_및_보완_보고서.md  정합성_테스트.md  최종_개선_완료_보고서.md  최종_정합성_검증_보고서.md  코드_정합성_분석_및_개발계획.md  통합_테스트_가이드.md  통합테스트_결과_보고서.md  프론트엔드_백엔드_정합성_분석_및_수정_완료.md  환경변수_설정_가이드.md
apps/api/: PDF_처리_개선_완료.md  pytest.ini  requirements.txt  개선_완료_요약.md  마이그레이션_가이드.md  마이그레이션_실행_가이드.md  전체_마이그레이션_가이드.md  정합성_테스트_체크리스트.md  한글_인코딩_개선_완료.md
apps/api/alembic/: env.py
apps/api/app/: celery_app.py  database.py  main.py
apps/api/scripts/: batch_upload_pdfs.py  init_db.py  (+4 more)
apps/web/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
attached_assets/: Pasted--1-Docker-Compose-1-env--1762609330873_1762609330873.txt
old_assets/: AI_평가_기능_구현_기획서.md  AI가 뽑은 스타 애널리스트 평가 항목.docx  Mix_of_Agents_알고리즘_설계.md  PDF_문서_처리_파이프라인_기획안.md  가중 평균 오차율 계산 방법.docx  증권사 리서치센터 애널리스트 리스트(반도체 자동차 방산 금융 최종) (1).xlsx  애널리스트_평가_시스템_기획안.md  웹_애플리케이션_시스템_개발_기획안.md  통합_개발계획서.md
(+125 files in other folders)
